objects/Booking__c.object
<CustomObject>
    <fields>
        <fullName>Advanced_amount__c</fullName>
        <label>Advanced amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booking_From_date__c</fullName>
        <label>Booking From date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_To_date__c</fullName>
        <label>Booking To date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cars__c</fullName>
        <label>Car</label>
        <referenceTo>Car__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Customer_name_look_up__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer name(look up)</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <label>Driver</label>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Drop_point__c</fullName>
        <label>Drop point</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fare__c</fullName>
        <formula>( Booking_To_date__c - Booking_From_date__c ) *  Cars__r.Charges_Per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fare</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Id_proof__c</fullName>
        <label>Id proof</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_up_point__c</fullName>
        <label>Pick up point</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>